# domain-bounded-cslr

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.gpu  README.md  compose.gpu.yaml  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: experiment.md
.github/workflows/: ci.yml  release.yml
app/backend/: main.py  routes.py  schemas.py  services.py
app/frontend/: app.js  index.html  styles.css
artifacts/metrics/: README.md  ce-csl-features-receipt.json  legacy-ctc-checkpoint-dev.csv  legacy-ctc-checkpoint-dev.summary.json  legacy-ctc-dev.csv  legacy-ctc-dev.summary.json  legacy-ctc-test.csv  legacy-ctc-test.summary.json  teammate-ctc-eval-detailed.csv  teammate-ctc-official-split-summary.json
configs/: example_intents.yaml  features.yaml  hospital_intents.yaml  training.yaml  training_ctc.yaml  training_ctc_smoke.yaml
configs/datasets/: ce_csl.yaml  example.yaml  nationalcsl_dp.yaml
configs/models/: bilstm.yaml  ctc_lstm.yaml  lstm.yaml  tcn.yaml  transformer.yaml
data/: README.md
data/manifests/: ce-csl-ctc-vocab.txt  ce-csl-gloss-vocab.csv  ce-csl.csv  example.csv
docs/: git-workflow.md
scripts/: check_repository_safety.py  check_windows_environment.ps1  export_onnx.py
tests/: test_api.py  test_batch.py  test_cli.py  test_contracts.py  test_ctc.py  test_ctc_data.py  test_ctc_export.py  test_ctc_resume.py  test_feature_bundle.py  test_gloss.py  test_manifest.py  test_metrics.py  test_semantic.py  test_sequence.py  test_service.py
(+51 files in other folders)
